examples/services/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: frontend
    version: v1
    team: orange
  name: frontend
  namespace: orange
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 4040
  selector:
    service: frontend
    version: v1
    team: orange
  type: ClusterIP
