examples/services/frontend/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
  namespace: orange
  labels:
    service: frontend
    version: v1
    team: orange
spec:
  rules:
  - host: www-st.example.com
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
