examples/services/frontend/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-infra-namespaces-to-frontend
  namespace: naranja
  labels:
    servicio: frontend
    version: v1
    equipo: naranja
spec:
  podSelector:
    matchLabels:
      servicio: frontend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          equipo: infra
